# chiiiirrus

./: .validator.toml  README.md  config.toml
assets/element-call/: config.json.tmpl
assets/element-web/: config.json.tmpl
assets/headscale/: headplane-config-init.sh  headplane_config_init.py
assets/mail_init/: Dockerfile  init.sh
assets/matrix/: appservice-openclaw.yaml.tmpl  bootstrap.sh  homeserver.yaml.tmpl  init.sh  log.config.yaml
assets/openclaw/: user-data.sh.tmpl
assets/openclaw_bot/: package.json  pnpm-lock.yaml
assets/openclaw_bot_py/: README.md  pyproject.toml
assets/openclaw_bot_py/src/openclaw_bot/: config.py  main.py  openclaw.py
assets/site/: index.html
assets/synapse-admin/: Dockerfile  config.json.tmpl  entrypoint.sh  nginx.conf
assets/turn/: livekit.yaml.tmpl  turnserver.conf.tmpl  user-data.sh.tmpl
assets/webmail_init/: Dockerfile  init.sh  oauth.inc.php.tmpl
docs/plans/: automated-credential-rotation.md  bot-per-agent.md  element-web-self-host.md  matrix-appservice.md  matrix-voice-video.md  openclaw-matrix-channel.md  sydent-identity-server.md
infra/: app_builder.py
infra/constructs/: db_exec_tags.py  fargate_service.py  input_hash.py  node_exec_tags.py  public_http_alb.py  shared_efs_volume.py  standard_backup_plan.py
infra/models/: app_config.py  asset_loader.py  element_call_config.py  element_web_config.py  fargate_task_config.py  foundation_config.py  foundation_exports.py  lk_jwt_config.py  mail_config.py  mail_exports.py  site_config.py  synapse_admin_config.py  turn_config.py  (+2 more)
tests/: test_synth.py
(+38 files in other folders)
